add touch event for the canvas

--- a/client/components/colorPicker/colorPicker.html
+++ b/client/components/colorPicker/colorPicker.html
@@ -1,5 +1,5 @@
 <div class="color-picker">
-  <md-button class="md-icon-button" ng-click="showPalette()">
+  <md-button class="md-icon-button" aria-label="palette-color" ng-click="showPalette()">
     <ng-md-icon icon="color_lens" ></ng-md-icon>
   </md-button>
   <div class="color-palette" ng-if="clickVar">
